--- a/cv.html
+++ b/cv.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" data-page="cv">
 <head>
-  <title>CV — Michael Fenton</title>
+  <title>CV - Michael Fenton</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing industry experience, research experience, innovative teaching, education research, STEM expertise, course design, instructional design and moderation experience, and publications." />
+  <meta name="description" content="CV for Michael Fenton, multi-award-winning scientist, teacher, instructional designer, STEM education lecturer, courseware writer, NZQA assessment moderator, public speaker, STEM education consultant, actor." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/cv.html" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="CV - Michael Fenton" />
+  <meta property="og:description" content="CV for Michael Fenton, multi-award-winning scientist, teacher, instructional designer, STEM education lecturer, courseware writer, NZQA assessment moderator, public speaker, STEM education consultant, actor." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikementonnz.github.io/cv.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="CV - Michael Fenton" />
+  <meta name="twitter:description" content="CV for Michael Fenton, multi-award-winning scientist, teacher, instructional designer, STEM education lecturer, courseware writer, NZQA assessment moderator, public speaker, STEM education consultant, actor." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -142,7 +142,9 @@
 	   <li>Research active - long list of education conference publications/presentations.</li>
           </ul>
         </li>
-	<br>
+       </ul>
+       <br>
+       <ul>
 	<li><strong>STEM subject expertise</strong>:
           <ul>
             <li><strong>Postgraduate</strong>: Level 7 Grad. Dip. Science and Mathematics Education and Education Leadership.</li>
