--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Michael Fenton innovative teaching, education research, teacher, scientist,Nexus Research Group, discovered casio serial protocol pause RECEIVE() without a COM error, picaxe casio calculator data logger, digital multimter data logger, RIGEL games design for science teaching." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, and workshops focused on quality STEM teaching at a national and international level. Includes original work for ultra low cost science equipment for equitable access to hands-on science teaching at all age levels. Suitable for primary, intermediate, junior and senior school science and mathematics teaching, and foundational or introductory tertiary / polytechnic STEM courses." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="Michael Fenton — Research & Teaching Portfolio" />
+  <meta property="og:description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, and workshops focused on quality STEM teaching at a national and international level. Includes original work for ultra low cost science equipment for equitable access to hands-on science teaching at all age levels. Suitable for primary, intermediate, junior and senior school science and mathematics teaching, and foundational or introductory tertiary / polytechnic STEM courses." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton — Research & Teaching Portfolio" />
+  <meta name="twitter:description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, and workshops focused on quality STEM teaching at a national and international level. Includes original work for ultra low cost science equipment for equitable access to hands-on science teaching at all age levels. Suitable for primary, intermediate, junior and senior school science and mathematics teaching, and foundational or introductory tertiary / polytechnic STEM courses." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -27,7 +27,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
-    "keywords": "Michael Fenton, scientist, STEM education lecturer, Nexus Research Group, instructinal design, moderation, B9 robot, RIGEL real world games and electronics link, game design in science, education research, future-focused, Bill Pickering, picaxe casio calculator data logger, arduino casio calculator data logger",
+    "keywords": "Michael Fenton, scientist, STEM education lecturer, Nexus Research Group, instructional design, assessment moderation, NZQA, NCEA, B9 robot, RIGEL real world games and electronics link, game design in science, education research, future-focused, Bill Pickering, picaxe casio calculator data logger, arduino casio calculator data logger, microbit casio calculator data logger",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
@@ -94,7 +94,7 @@
 	worked as an education consultant, with expertise in course and
 	programme design, resource writing, assessment design and assessment
 	moderation. He has taught STEM subjects at all levels from Primary to
-	Tertiary, and mentored teachers in the compulsory education sector and
+	Tertiary/Polytechnic, and mentored teachers in the compulsory education sector and
 	vocational education and training sectors.</p>
 	<h3 id="the-nexus-research-group">The Nexus Research Group</h3>
 	<p>Ahead of his time, Michael volunteered his "spare" time as founder and director of New Zealand’s only research group
