--- a/projects.html
+++ b/projects.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" data-page="projects">
 <head>
-  <title>Innovative STEM Teaching — Michael Fenton</title>
+  <title>Innovative STEM Teaching Projects - Michael Fenton</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making,  Maker Science, Digital Multimeters as Low Cost Data Loggers, Game Design to Teach STEM, gaem design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link" />
+  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making, Maker Science, Digital Multimeters as Low Cost Data Loggers, Game Design to Teach STEM, game design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, microbit casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link RIGEL" />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/projects.html" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="Innovative STEM Teaching Projects - Michael Fenton" />
+  <meta property="og:description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making, Maker Science, Digital Multimeters as Low Cost Data Loggers, Game Design to Teach STEM, game design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, microbit casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link RIGEL" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikementonnz.github.io/projects.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Innovative STEM Teaching Projects - Michael Fenton" />
+  <meta name="twitter:description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making, Maker Science, Digital Multimeters as Low Cost Data Loggers, Game Design to Teach STEM, game design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, microbit casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link RIGEL" />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -85,7 +85,7 @@
       </div>
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Research">
-      <h2>Projects and Education Research</h2>
+      <h2>Innovative STEM Teaching Projects</h2>
       <p>Current lines of inquiry and active studies.</p>
         <article class="card" aria-labelledby="project1-title">
           <h4 id="project1-title">Digital Multimeters as Low Cost Data Loggers: Citizen science and authentic cross-curricula learning</h4>
