--- a/projects/casio-calculator-data-logger-hack.html
+++ b/projects/casio-calculator-data-logger-hack.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Updated Casio calculator data logger and remote control</title>
+  <title>Updated hack discovery; Casio calculator data logger and remote control</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Michael Fenton upgrades his Picaxe Casio calculator data logger developed and published in the mid-2000s. Michael's Casio serial protocol hack uses Casio FX-9750 and FX-9860 calculators for data logging at ultra low cost.  Attach sensors to connect Casio calculators to Picaxe, Microbit, ESP8266 or ESP32. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
 
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Education Research Project" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing DIY science equipment, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/casio-calculator-data-logger-hack.html" />
+  <meta property="og:title" content="Updated hack discovery; Casio calculator data logger and remote control" />
+  <meta property="og:description" content="Michael Fenton upgrades his Picaxe Casio calculator data logger developed and published in the mid-2000s. Michael's Casio serial protocol hack uses Casio FX-9750 and FX-9860 calculators for data logging at ultra low cost.  Attach sensors to connect Casio calculators to Picaxe, Microbit, ESP8266 or ESP32. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/casio-calculator-data-logger-hack.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Education Research Project" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing DIY science equipment, workshops, and publications." />
+  <meta name="twitter:title" content="Updated hack discovery; Casio calculator data logger and remote control" />
+  <meta name="twitter:description" content="Michael Fenton upgrades his Picaxe Casio calculator data logger developed and published in the mid-2000s. Michael's Casio serial protocol hack uses Casio FX-9750 and FX-9860 calculators for data logging at ultra low cost.  Attach sensors to connect Casio calculators to Picaxe, Microbit, ESP8266 or ESP32. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
