--- a/projects/casio-calculator-picaxe-data-logger.html
+++ b/projects/casio-calculator-picaxe-data-logger.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Picaxe to Casio calculator bi-directional data logger and remote control</title>
+  <title>Michael Fenton - Picaxe to Casio calculator bi-directional data logger and remote control</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV. Michael Fenton pioneered the classroom use of standard FX-9750 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. Michael invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units" />
+  <meta name="description" content="Michael Fenton pioneered the classroom use of standard FX-9750 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. Michael invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units" />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Education Research Project" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/casio-calculator-picaxe-data-logger.html" />
+  <meta property="og:title" content="Michael Fenton - Picaxe to Casio calculator bi-directional data logger and remote control" />
+  <meta property="og:description" content="Michael Fenton pioneered the classroom use of standard FX-9750 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. Michael invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/casio-calculator-picaxe-data-logger.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Education Research Project" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton - Picaxe to Casio calculator bi-directional data logger and remote control" />
+  <meta name="twitter:description" content="Michael Fenton pioneered the classroom use of standard FX-9750 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. Michael invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units" />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
