--- a/projects/digital-multimeters-as-data-loggers.html
+++ b/projects/digital-multimeters-as-data-loggers.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Digital Multimeters as Data Logger Substitutes</title>
+  <title>Michael Fenton - Digital Multimeters as Data Logger Substitutes</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. In the mid-2000's Michael pioneered the classroom use of digital multimeters (DMM) as ultra-low cost data logger subsitutes. His 'build it, Test it, Use it' pedagogy makes experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and in resource-limited schools." />
+  <meta name="description" content="In the mid-2000's Michael pioneered the classroom use of digital multimeters (DMM) as ultra-low cost data logger subsitutes. His 'build it, Test it, Use it' pedagogy makes experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and in resource-limited schools." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Education Research Project" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/digital-multimeters-as-data-loggers.html" />
+  <meta property="og:title" content="Michael Fenton - Digital Multimeters as Data Logger Substitutes" />
+  <meta property="og:description" content="In the mid-2000's Michael pioneered the classroom use of digital multimeters (DMM) as ultra-low cost data logger subsitutes. His 'build it, Test it, Use it' pedagogy makes experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and in resource-limited schools" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/digital-multimeters-as-data-loggers.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Education Research Project" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton - Digital Multimeters as Data Logger Substitutes" />
+  <meta name="twitter:description" content="In the mid-2000's Michael pioneered the classroom use of digital multimeters (DMM) as ultra-low cost data logger subsitutes. His 'build it, Test it, Use it' pedagogy makes experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and in resource-limited schools" />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
