--- a/projects/maker-science-robotics-electronics.html
+++ b/projects/maker-science-robotics-electronics.html
@@ -8,12 +8,12 @@
   <meta name="description" content="Academic portfolio and CV for Michael Fenton. When students walk into Michael Fenton's classroom, they don't just learn about science, they become scientists. Through a blended Technology/Science approach he calls 'Maker Science', abstract concepts are transformed into tangible devices that students build, test, and use to understand the world around them." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/maker-science-robotics-electronics.html" />
   <meta property="og:title" content="Michael Fenton — Teaching school robotics & electronics" />
   <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/maker-science-robotics-electronics.html" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Michael Fenton — Teaching school robotics & electronics" />
   <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
