--- a/publications.html
+++ b/publications.html
@@ -5,21 +5,21 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Examples of research presentations, journal publications, and learning  resoruces by Michael Fenton. To be updated." />
+  <meta name="description" content="Examples of research presentations, journal publications, and learning resources by Michael Fenton. To be updated." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/publications.html" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="Publications — Michael Fenton" />
+  <meta property="og:description" content="Examples of research presentations, journal publications, and learning resources by Michael Fenton. To be updated." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikementonnz.github.io/publications.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Publications — Michael Fenton" />
+  <meta name="twitter:description" content="Examples of research presentations, journal publications, and learning resources by Michael Fenton. To be updated." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -87,6 +87,20 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Publications">
       <h2>Publications</h2>
+<p>Examples of publications by scientist and STEM education specialist Michael Fenton.</p>
+<ul>
+<li>Teacher professional development and teacher training,</li>
+<li>Science and Mathematics teaching pedagogy,</li> 
+<li>Ultra low cost home-made science equipment for equitable access to science and mathematics data logging equipment.</li>
+<li>Increasing learner engagement and achievement through practical hands-on learning,</li> 
+<li>Pedagogy and student involvement in a school-wide renewable energy pilot project (Enviropower). </li> 
+<li>Integrated monitoring and control for seawater aquaculture systems</li>
+<li>The use of Rhizobium species in New Zealand ryegrass pastures,</li>
+<li>Giardia and Giardiasis in New Zealand</li>
+<li>Plasmid Transfer in Soil / Plant Environments</li>
+</ul> 
+
+<br>
       <ol class="pub-list apa" aria-label="Sample publications list">
         <li id="pub-prof-develop-2015">Fenton, M., &amp; Fenton, C. (2015). Primary teachers' experiences of professional development in Science by
 distance learning. <em>Proceedings of the New Zealand Association for Cooperative Education international conference</em>, 15–17 April.</li>
@@ -94,7 +108,8 @@ distance learning. <em>Proceedings of the New Zealand Association for Cooperativ
 	    <li>World Interactive Software: Year 12 Interactive Physics. Digital textbook.</li>
       </ol>
 <img src="assets/img/michael-fenton-physics-interactive.jpg" alt="Year 12 Interactive Physics written by Michael Fenton" width="400" />
-      <p> More to be added soon...</p>
+<br>
+      <p><strong>More to be added soon...</strong></p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
