--- a/talks.html
+++ b/talks.html
@@ -8,18 +8,18 @@
   <meta name="description" content="Examples of science communication, public speaking, and media coverage, showcasing innovative STEM teaching and education leadership by Michael Fenton." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/talks.html" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="Talks — Michael Fenton" />
+  <meta property="og:description" content="Examples of science communication, public speaking, and media coverage, showcasing innovative STEM teaching and education leadership by Michael Fenton" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikementonnz.github.io/talks.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Talks — Michael Fenton" />
+  <meta name="twitter:description" content="Examples of science communication, public speaking, and media coverage, showcasing innovative STEM teaching and education leadership by Michael Fenton." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -86,6 +86,7 @@
       </div>
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Talks">
+ <p>Examples of science communication, public speaking, and media coverage, showcasing innovative STEM teaching and education leadership by Michael Fenton</p>
       <h2>Talks</h2>
       <ul>
         <li id="feature-interview-and-video"><strong>Michael and Kimberley Fenton Get Kids into Coding and Digital Technology.</strong> — News feature and  video<br /><span class="meta"> <a href="https://www.stuff.co.nz/technology/102483973/robot-competition-replaces-steam-car-challenge-at-taranaki-science-fair" target="_blank" aria-label="Link to article and video">Link to article and video</a></span></li></ul><ul>
@@ -95,6 +96,7 @@
       </ul>
 	<h2>Science communication</h2>
 	<ul>
+        <li id="ai-has-learnt-to-lie"><strong>AI has learnt to lie - A warning for teachers using AI in Education.</strong> — by Michael Fenton, LinkedIn post<br /><span class="meta"> <a href="projects/artificial-intelligence-has-learnt-to-lie.html" aria-label="Link to LinkedIn post">Link to LinkedIn post (copy)</a></span></li></ul><ul>
         <li id="ai-in-education"><strong>AI in Education.</strong> — by Michael Fenton, LinkedIn post<br /><span class="meta"> <a href="projects/artificial-intelligence-in-education.html" aria-label="Link to LinkedIn post">Link to LinkedIn post (copy)</a></span></li></ul><ul>
         <li id="instructional-design-and-moderation-in-stem"><strong>Aligning Pedagogy and Purpose: Instructional Design and Moderation for Cross-curricula STEM Programme Design.</strong> — by Michael Fenton, LinkedIn post<br /><span class="meta"> <a href="projects/aligning-pedagogy-and purpose-instructional-design-and-moderation.html" aria-label="Link to LinkedIn post">Link to LinkedIn post (copy)</a></span></li></ul><ul>
 	<li id="michael-fenton-authentic-science-education-interview"><strong>New Zealand Science teaching report card: Must do better</strong> — Science & Technology feature interview<br /><span class="meta"> <a href="files/michael-fenton-school-science-earns-an-F.pdf" target="_blank" aria-label="Link to transcribed published article">Link to transcribed and orginal article</a></span></li></ul><ul>
