--- a/teaching.html
+++ b/teaching.html
@@ -5,21 +5,21 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio for Michael Fenton, showcasing innovative teaching at all levels of education, including from Primary School Digital Technology, Secondary / High School Sciences and Mathematics, to Tertiary level degree and sub-degree programmes." />
+  <meta name="description" content="Innovative teaching at all levels of education, including Primary School Digital Technology, Secondary school / High school Sciences and Mathematics, Polytechnic / Tertiary level degree and sub-degree programmes. Raising learner achievement and engagement through student-centered teaching, problem-based learning, and future-focused technology. Teaching face-to-face, by distance or using blended delivery, at scale." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/teaching.html" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="Future-focused Teaching — Michael Fenton" />
+  <meta property="og:description" content="Innovative teaching at all levels of education, including Primary School Digital Technology, Secondary school / High school Sciences and Mathematics, Polytechnic / Tertiary level degree and sub-degree programmes. Raising learner achievement and engagement through student-centered teaching, problem-based learning, and future-focused technology. Teaching face-to-face, by distance or using blended delivery, at scale." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikementonnz.github.io/teaching.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Future-focused Teaching — Michael Fenton" />
+  <meta name="twitter:description" content="Innovative teaching at all levels of education, including Primary School Digital Technology, Secondary school / High school Sciences and Mathematics, Polytechnic / Tertiary level degree and sub-degree programmes. Raising learner achievement and engagement through student-centered teaching, problem-based learning, and future-focused technology. Teaching face-to-face, by distance or using blended delivery, at scale." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -27,7 +27,7 @@
     "name": "Michael Fenton",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
-    "keywords": "arduino casio calculator data logger hack, picaxe casio calculator data logger hack, moderation, instructional design, B9 robot, cross-curricula STEM, art and science, artificial intelligence in education, Elearning fellowship, scientist, teacher, education lecturer, educaiton consultant",
+    "keywords": "arduino casio calculator data logger hack, picaxe casio calculator data logger hack, microbit casio caclulator data logger, moderation, instructional design, B9 robot, cross-curricula STEM, art and science, artificial intelligence in education, E-learning fellowship, scientist, teacher, education lecturer, educaiton consultant",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
