--- a/workshops.html
+++ b/workshops.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" data-page="workshops">
 <head>
-  <title>Workshops — Michael Fenton</title>
+  <title>Workshops delivered by scientist and STEM education specialist Michael Fenton</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative workshops focused on quality teaching at a national and international level. More to be added." />
+  <meta name="description" content="Wokshops delivered by scientist, teacher and STEM education consultant Michael Fenton. Workshops include Science and Mathematics Teaching pedagogy, Assessment moderation training, Instructional Design, Programme design, Course design, engaging practical science lessons, citizen science, authentic hands-on science and mathematics investigations, learning beyond the classroom, ultra low cost home-made science equipment for equitable access to science and mathematics resources." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikementonnz.github.io/workshops.html" />
    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-  <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:title" content="Workshops delivered by scientist and STEM education specialist Michael Fenton" />
+  <meta property="og:description" content="Workshops delivered by scientist, teacher and STEM education consultant Michael Fenton. Workshops include Science and Mathematics Teaching pedagogy, Assessment moderation training, Instructional Design, Programme design, Course design, engaging practical science lessons, citizen science, authentic hands-on science and mathematics investigations, learning beyond the classroom, ultra low cost home-made science equipment for equitable access to science and mathematics resources." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikementonnz.github.io/workshops.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Academic Portfolio" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Workshops delivered by scientist and STEM education specialist Michael Fenton" />
+  <meta name="twitter:description" content="Workshops delivered by scientist, teacher and STEM education consultant Michael Fenton. Workshops include Science and Mathematics Teaching pedagogy, Assessment moderation training, Instructional Design, Programme design, Course design, engaging practical science lessons, citizen science, authentic hands-on science and mathematics investigations, learning beyond the classroom, ultra low cost home-made science equipment for equitable access to science and mathematics resources." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
@@ -84,7 +84,23 @@
       </div>
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Workshops">
-      <h2>Workshops</h2>
+ <p>
+<h2>Workshops</h2>
+ <p>Examples of workshops delivered by scientist and STEM education specialist Michael Fenton.</p>
+ <p><strong>Workshops include:</strong></p>
+<ul>
+<li>Teacher professional development and teacher training,</li>
+<li>Teaching perspectives and practice-led research project mentoring,</li>
+<li>Science and Mathematics teaching pedagogy,</li> 
+<li>Assessment moderation training,</li> 
+<li>Instructional Design for STEM programmes,</li>
+<li>Course and assessment design embedding moderation best practive,</li> 
+<li>Increasing learner engagement and achievement through practical hands-on learning,</li> 
+<li>Citizen science - breaking classroom boundaries,</li> 
+<li>Authentic hands-on science and mathematics investigations,</li>
+<li>Ultra low cost home-made science equipment for equitable access to science and mathematics data logging equipment.</li>
+</ul> 
+      <h3>Examples</h3>
 	<ul>
         <li id="tradies-to-tutors"><strong>Transforming From Trades Professional to Vocational Tutor</strong> - Workshop.<br /><span class="meta"> <a href="files/michael-fenton-vocational-teaching-workshop.pdf" target="_blank" aria-label="Link to workshop notes for new tutors">Link to workshop notes for new tutors</a></span></li>
       </ul>
