--- a/projects/aligning-pedagogy-and-purpose-instructional-design-and-moderation.html
+++ b/projects/aligning-pedagogy-and-purpose-instructional-design-and-moderation.html
@@ -5,18 +5,18 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, article Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme." />
+  <meta name="description" content="Michael Fenton article Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/aligning-pedagogy-and-purpose-instructional-design-and-moderation.html" />
   <meta property="og:title" content="Michael Fenton — Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme." />
+  <meta property="og:description" content="Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/aligning-pedagogy-and-purpose-instructional-design-and-moderation.html" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Michael Fenton — Talking about AI in Eduction" />
-  <meta name="twitter:description" content="Portfolio and academic CV. Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme." />
+  <meta name="twitter:description" content="Designing for Depth: The Role of Instructional Design and Moderation in Building a cross-curricula STEM Programme." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
