--- a/projects/artificial-intelligence-has-learnt-to-lie.html
+++ b/projects/artificial-intelligence-has-learnt-to-lie.html
@@ -5,18 +5,18 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Michael Fenton notes discussions on the use of AI in teaching and assessment miss an important warning. Michael's recent experiences have shown Gemini can lie and then knowingly and falsely claim it has not. Gemini’s behavior illustrates that even a statistically accurate LLM can feel unreliable if it mishandles errors." />
+  <meta name="description" content="Michael Fenton alerts teachers adn educations that discussion on the use of AI in teaching and assessment miss an important warning. Michael's recent experiences have shown Gemini can lie and then knowingly and falsely claim it has not. Gemini’s behavior illustrates that even a statistically accurate LLM can feel unreliable if it mishandles errors." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/artificial-intelligence-has-learnt-to-lie.html" />
   <meta property="og:title" content="Michael Fenton — When AI assistants lie: a warning for AI use in education" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta property="og:description" content="Michael Fenton alerts teachers adn educations that discussion on the use of AI in teaching and assessment miss an important warning. Michael's recent experiences have shown Gemini can lie and then knowingly and falsely claim it has not. Gemini’s behavior illustrates that even a statistically accurate LLM can feel unreliable if it mishandles errors." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/artificial-intelligence-has-learnt-to-lie.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Talking about AI in Eduction" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton — When AI assistants lie: a warning for AI use in education" />
+  <meta name="twitter:description" content="Michael Fenton alerts teachers adn educations that discussion on the use of AI in teaching and assessment miss an important warning. Michael's recent experiences have shown Gemini can lie and then knowingly and falsely claim it has not. Gemini’s behavior illustrates that even a statistically accurate LLM can feel unreliable if it mishandles errors." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
