--- a/projects/artificial-intelligence-in-education.html
+++ b/projects/artificial-intelligence-in-education.html
@@ -5,18 +5,18 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, talking about AI in Eduction." />
+  <meta name="description" content= "Discussion about recent education research on the use of AI in Eduction. Students who rely on AI tools from the outset show reduced brain activity and poorer recall compared to those who read for information or write from memory." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Talking about AI in Eduction" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/artificial-intelligence-in-education.html" />
+  <meta property="og:title" content="Michael Fenton — The Use of Artificial Intelligence (AI) in Education" />
+  <meta property="og:description" content="Discussion about recent education research on the use of AI in Eduction. Students who rely on AI tools from the outset show reduced brain activity and poorer recall compared to those who read for information or write from memory." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/artificial-intelligence-in-education.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Talking about AI in Eduction" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton — The Use of Artificial Intelligence (AI) in Education" />
+  <meta name="twitter:description" content="Discussion about recent education research on the use of AI in Eduction. Students who rely on AI tools from the outset show reduced brain activity and poorer recall compared to those who read for information or write from memory." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
