--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -5,18 +5,18 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, using the design and construction of movie props to engage learners in hands-on holistic maths and science lessons that stimulate creativity and imagination. The mobile science lab, Lost in Space robot B9, promotes affordable, inquiry-driven cross-curricula STEM learning in a fun way." />
+  <meta name="description" content="Michael Fenton, using the design and construction of movie props to engage learners in hands-on holistic maths and science lessons that stimulate creativity and imagination. The mobile science lab, Lost in Space robot B9, promotes affordable, inquiry-driven cross-curricula STEM learning in a fun way." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Education Research Project" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/b9-robot-mobile-laboratory.html" />
+  <meta property="og:title" content="Michael Fenton — B9 Robot: Working, talking, interactive mobile lab to engage STEM learners" />
+  <meta property="og:description" content="Michael Fenton, using the design and construction of movie props to engage learners in hands-on holistic maths and science lessons that stimulate creativity and imagination. The mobile science lab, Lost in Space robot B9, promotes affordable, inquiry-driven cross-curricula STEM learning in a fun way" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/b9-robot-mobile-laboratory.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Education Research Project" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton — B9 Robot: Working, talking, interactive mobile lab to engage STEM learners" />
+  <meta name="twitter:description" content="Michael Fenton, using the design and construction of movie props to engage learners in hands-on holistic maths and science lessons that stimulate creativity and imagination. The mobile science lab, Lost in Space robot B9, promotes affordable, inquiry-driven cross-curricula STEM learning in a fun way" />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
