--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -5,18 +5,18 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton has taught game design and presented his work at education conferences across New Zealand, showing how accessible game tools can act as both a creative outlet and a scientific instrument. You can downlaod his Apple II Transylvania remake, complete with original soundtrack." />
+  <meta name="description" content="Michael Fenton has taught game design and presented his work at education conferences across New Zealand, showing how accessible game tools can act as both a creative outlet and a scientific instrument. You can download his Apple II Transylvania remake, complete with original soundtrack." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Education Research Project" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/game-design-coding-learning.html" />
+  <meta property="og:title" content="Michael Fenton — Game Design for Cross-curricula STEM learning" />
+  <meta property="og:description" content="Michael Fenton has taught game design and presented his work at education conferences across New Zealand, showing how accessible game tools can act as both a creative outlet and a scientific instrument. You can download his Apple II Transylvania remake, complete with original soundtrack.." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/game-design-coding-learning.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Education Research Project" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton — Game Design for Cross-curricula STEM learning" />
+  <meta name="twitter:description" content="Michael Fenton has taught game design and presented his work at education conferences across New Zealand, showing how accessible game tools can act as both a creative outlet and a scientific instrument. You can download his Apple II Transylvania remake, complete with original soundtrack." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
