--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Real-world Interactive Games and Electronics Link</title>
+  <title>Michael Fenton — Real-world Interactive Games and Electronics Link RIGEL</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. In the mid-2000's Michael invented the Real-world Interactive Games and Electronics Link, recently upgraded to work with Picaxe, ESP8266 and ESP32 microcontrollers. Game design software combines Art and Science in an ultra low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and resource-limited schools.RIGEL can talk, plays games using sensors connected to your body or DIY game controller. It is a home security centre, a science lab, and an industrial measurement and control (robot remote sensing and control) centre." />
+  <meta name="description" content="In the mid-2000's Michael invented the Real-world Interactive Games and Electronics Link, recently upgraded to work with Picaxe, ESP8266 and ESP32 microcontrollers. Game design software combines Art and Science in an ultra low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and resource-limited schools.RIGEL can talk, plays games using sensors connected to your body or DIY game controller. It is a home security centre, a science lab, and an industrial measurement and control (robot remote sensing and control) centre." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
-  <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
-  <meta property="og:title" content="Michael Fenton — Education Research Project" />
-  <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <link rel="canonical" href="https://mikefentonnz.github.io/projects/rigel-games-electronics-link.html" />
+  <meta property="og:title" content="Michael Fenton — Real-world Interactive Games and Electronics Link RIGEL" />
+  <meta property="og:description" content="In the mid-2000's Michael invented the Real-world Interactive Games and Electronics Link, recently upgraded to work with Picaxe, ESP8266 and ESP32 microcontrollers. Game design software combines Art and Science in an ultra low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and resource-limited schools.RIGEL can talk, plays games using sensors connected to your body or DIY game controller. It is a home security centre, a science lab, and an industrial measurement and control (robot remote sensing and control) centre." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
-  <meta property="og:url" content="https://MikeFentonNZ.github.io/" />
+  <meta property="og:url" content="https://mikefentonnz.github.io/projects/rigel-games-electronics-link.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Michael Fenton — Education Research Project" />
-  <meta name="twitter:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
+  <meta name="twitter:title" content="Michael Fenton — Real-world Interactive Games and Electronics Link RIGEL" />
+  <meta name="twitter:description" content="In the mid-2000's Michael invented the Real-world Interactive Games and Electronics Link, recently upgraded to work with Picaxe, ESP8266 and ESP32 microcontrollers. Game design software combines Art and Science in an ultra low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and resource-limited schools.RIGEL can talk, plays games using sensors connected to your body or DIY game controller. It is a home security centre, a science lab, and an industrial measurement and control (robot remote sensing and control) centre." />
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
