--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Examples of research presentations, journal publications, and learning resources by Michael Fenton. To be updated." />
+  <meta name="description" content="Examples of research presentations, journal publications, and education leadership learning by Michael Fenton." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://mikementonnz.github.io/publications.html" />
@@ -86,30 +86,86 @@
       </div>
     </aside>
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Publications">
-      <h2>Publications</h2>
-<p>Examples of publications by scientist and STEM education specialist Michael Fenton.</p>
-<ul>
-<li>Teacher professional development and teacher training,</li>
-<li>Science and Mathematics teaching pedagogy,</li> 
-<li>Ultra low cost home-made science equipment for equitable access to science and mathematics data logging equipment.</li>
-<li>Increasing learner engagement and achievement through practical hands-on learning,</li> 
-<li>Pedagogy and student involvement in a school-wide renewable energy pilot project (Enviropower). </li> 
-<li>Integrated monitoring and control for seawater aquaculture systems</li>
-<li>The use of Rhizobium species in New Zealand ryegrass pastures,</li>
-<li>Giardia and Giardiasis in New Zealand</li>
-<li>Plasmid Transfer in Soil / Plant Environments</li>
-</ul> 
+      
+<h2>Publications & Scholarly Activity</h2>
+<p>This demonstrates sustained scholarly contribution across three distinct career phases:</p>
+<ol>
+<li><strong>Microbiology Research</strong> (1991&ndash;1994): Peer-reviewed international journal publications in soil microbiology and symbiotic bacteria.</li>
+<li><strong>Classroom Teaching Innovation</strong> (1999&ndash;2018): Extensive peer-reviewed conference presentations and professional journal publications in STEM education pedagogy.</li>
+<li><strong>Teacher Education Leadership</strong> (2011&ndash;2018): Major curriculum development for tertiary STEM teacher education programs at a national level.</li>
+</ol>
+<p>The progression shows consistent engagement with peer review processes, recognition through competitive fellowships and national awards, and sustained impact on teaching and assessment practice at primary, secondary, and tertiary levels across all STEM disciplines.</p>
+
+<h3>Peer-Reviewed Research Journal Publications</h3>
+<p><strong>Fenton, M.</strong>, &amp; Jarvis, B. D. W. (1991). Plasmid transfer in soil/plant environments. <em>New Zealand Microbiological Society Newsletter</em>, August.</p>
+<p>Jarvis, B. D. W., &amp; <strong>Fenton, M.</strong> (1994). Expression of the symbiotic plasmid from <em>Rhizobium leguminosarum</em> biovar trifolii in <em>Sphingobacterium multivorum</em>. <em>Canadian Journal of Microbiology</em>, <em>40</em>, 873&ndash;879.</p>
+<p>Rao, J. R., <strong>Fenton, M.</strong>, &amp; Jarvis, B. D. W. (1994). Symbiotic plasmid transfer in <em>Rhizobium leguminosarum</em> biovar trifolii and competition between the inoculant strain ICMP2163 and transconjugant soil bacteria. <em>Soil Biology and Biochemistry</em>, <em>26</em>, 339&ndash;351.</p>
+<p>Brown, T. J., Kelly, P. J., Ionas, G., Clarke, J. M., <strong>Fenton, M.</strong>, &amp; Pickering, M. (1994). Giardia and giardiasis in New Zealand. In R. C. A. Thompson, J. A. Reynoldson, &amp; A. J. Lymbery (Eds.), <em>Giardia: From molecules to disease</em> (pp. 124&ndash;125). CAB International.</p>
+<p>Jarvis, B. D. W., &amp; Tighe, S. W. (1994). Rapid identification of <em>Rhizobium</em> species based on cellular fatty acid analysis. <em>Plant and Soil</em>, <em>161</em>(2), 289&ndash;298.</p>
+
+<h3>Peer-Reviewed Government / Council Research Reports</h3>
+<p><strong>Fenton, M.</strong> (2008). <em>Authentic learning using mobile sensor technology with reflections on the state of science education in New Zealand</em> [E-Learning Fellowship research report]. CORE Education Ltd. Ministry of Education. http://nexusresearchgroup.com/downloads/Michael-Fenton-eLearning-Report.pdf</p>
+<p><strong>Fenton, M.</strong> (2008). Pedagogy and student involvement. In <em>Energy conservation and renewable energy generation (EnviroPower) pilot &ndash; Completion report</em>. Venture Taranaki Trust. http://nexusresearchgroup.com/technical-data/enviropower-2.htm</p>
+
+<h3>Peer-Reviewed Conference Proceedings (Full Papers)</h3>
+<p><strong>Fenton, M.</strong>, &amp; Fenton, C. (2016). Teachers' experiences of professional development in science and mathematics by distance learning. In <em>Proceedings of the ULearn 2016 Conference</em>. Rotorua, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2009). RIGEL - Learning from life: Communities of learning via a connected curriculum. In <em>Proceedings of the Microsoft Partners in Learning Regional Innovative Teachers Conference</em>. Kuala Lumpur, Malaysia.</p>
+<p><strong>Fenton, M.</strong> (2008). Interactive eLearning tools for mathematics, science and robotics: The RIGEL project. In <em>Proceedings of the ULearn 2008 Conference</em>. Christchurch, New Zealand.</p>
+<p>Bishop, R., Ryan, C., Durdle, B., Fenton, C., &amp; <strong>Fenton, M.</strong> (2006). An integrated monitoring, control and biochemical system to reduce the reliance of biological filtration in recirculation seawater aquaculture systems. In <em>Proceedings of the World Aquaculture Society, Aqua 2006</em>.</p>
+<p>Fenton, C. D., <strong>Fenton, M.</strong>, &amp; Raynes, A. (2001). Microbiology misconceptions in secondary schools. In <em>Proceedings of the New Zealand Microbiological Society Conference</em>. Wellington, New Zealand.</p>
+<p><strong>Fenton, M.</strong>, &amp; Fenton, C. D. (1999). Light photomicroscopy using an internet webcam digital camera. In <em>Proceedings of the New Zealand Microbiological Society Conference</em>. Dunedin, New Zealand.</p>
+
+<h3>Peer-Reviewed Conference Proceedings (Workshop Papers)</h3>
+<p><strong>Fenton, M.</strong> (2018). Beyond fair tests &ndash; Other investigation strategies to engage reluctant learners. In <em>Proceedings of the New Zealand Association of Science Educators SciCon Conference</em>. Christchurch, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2018). Inspiring tomorrow's scientists: Doing science through the digital technologies curriculum. In <em>Proceedings of the New Zealand Association of Science Educators SciCon Conference</em>. Christchurch, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2017). The digital technology curriculum: Inspiring the coders of tomorrow or yesterday? In <em>Proceedings of the ULearn2017 Conference</em>. Hamilton, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2017). Gamification and digital technologies for effective mathematics teaching. In <em>Proceedings of the ULearn2017 Conference</em>. Hamilton, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2017). Reclaiming the maker space for effective science teaching. In <em>Proceedings of the ULearn2017 Conference</em>. Hamilton, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2015). Primary mathematics teaching online: Rich tasks for cross-curricula learning. In <em>Proceedings of the New Zealand Association of Mathematics Teachers Conference</em>. Auckland, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2013). Students leading learning in science and mathematics at home or school: New uses for multimeters. In <em>Proceedings of the ULearn13 Conference</em>. Hamilton, New Zealand.</p>
+<p>Winter, M., Anderson, D., <strong>Fenton, M.</strong>, &amp; Glasson, B. (2010). Supporting the primary science teacher fellows &ndash; Transforming primary science. In <em>Proceedings of the New Zealand Association of Science Educators SciCon 2010 Conference</em>. Nelson, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2007). Interactive ICT tools for mathematics, science and robotics &ndash; Getting the most from Game Maker. In <em>Proceedings of the New Zealand Association of Mathematics Teachers Conference</em>. Auckland, New Zealand.</p>
+<p>Broad, J., &amp; <strong>Fenton, M.</strong> (2001). Education under the microscope. In <em>Proceedings of the New Zealand Microbiological Society Conference</em>. Wellington, New Zealand.</p>
+
+<h3>Professional Journal Articles (Peer-Reviewed)</h3>
+<p><strong>Fenton, M.</strong> (2011). Using a digital multi-meter as an inexpensive data-logger substitute. <em>SCIOS</em>, Science Teachers Association of Western Australia.</p>
+<p><strong>Fenton, M.</strong> (2010). Digital and dirty in maths and science. <em>INTERFACE</em>, <em>22</em>.</p>
+<p><strong>Fenton, M.</strong> (2009). Teaching and the F-word: Fun. <em>INTERFACE</em>, <em>19</em>(761).</p>
+<p><strong>Fenton, M.</strong> (2004). Bill Pickering, rocket scientist. <em>The New Zealand Science Teachers Journal</em>, Term 1.</p>
+<p><strong>Fenton, M.</strong>, &amp; Fenton, C. D. (2003). DNA and genetic engineering. <em>The New Zealand Science Teachers Journal</em>, <em>103</em>.</p>
+
+<h3>Higher Degree by Research</h3>
+<p><strong>Fenton, M.</strong> (1994). <em>The expression in soil bacteria of the symbiotic genes from Rhizobium leguminosarum biovar trifolii</em> [Master's thesis, Massey University]. Massey University Research Repository.</p>
+
+<h3>Invited Keynote Addresses</h3>
+<p><strong>Fenton, M.</strong> (2016, July). <em>From Galileo to LIGO: Reclaiming the maker space for science</em> [Keynote address]. SciCon2016 Conference, Lower Hutt, New Zealand.</p>
+<p><strong>Fenton, M.</strong> (2014, July). <em>Enlightenment and education: A journey through time and space</em> [Keynote address]. Open Polytechnic Learning Conference, Wellington, New Zealand.</p>
+
+<h3>Major Curriculum Development and Educational Resources</h3>
+<p><strong>Tertiary-Level Course Development (Lead Author/Designer)</strong></p>
+<p>Level 4 New Zealand Certificate in Electrical Trade &ndash; General Electrical. (2023-2025). EarnLearn.</p>
+<p>New Zealand Board for Engineering Diplomas Assessment and Moderation Online Training Package. (2016).</p>
+<p>Level 7 Graduate Diploma in Primary Mathematics Teaching. (2014&ndash;2016). The Open Polytechnic of New Zealand.</p>
+<p>Level 7 Graduate Diploma in Primary Science Teaching. (2011&ndash;2012). The Open Polytechnic of New Zealand.</p>
+<p>Level 5 Diploma in Information &amp; Computer Technology. (2005). Western Institute of Technology at Taranaki.</p>
+
+<p><strong>Secondary-Level Course Development (Lead Author)</strong></p>
+<p>NZQA New Zealand Certificate in Study and Employment Pathways (Levels 3 and 4, 2022). Physical Sciences III and Physical Sciences IV.</p>
+<p>NCEA Levels 1&ndash;3 course content and assessment materials. (2006&ndash;2010). Science, Physics, Calculus, Applied Mathematics, Biology, Chemistry, Games Design, Robotics/Coding.</p>
+<p>Level 2 NCEA Physics Interactive CD-ROM. (2002). World Interactive Software, distributed by Roadshow Entertainment (NZ) Ltd.</p>
+
+<h3>Awards and Fellowships</h3>
+<p><strong>2017</strong> &ndash; Kiwibank New Zealander of the Year &ndash; Local Hero Medal (services to science education)</p>
+<p><strong>2015</strong> &ndash; New Zealand Prime Minister's Education Excellence Award finalist (Excellence in Leading)</p>
+<p><strong>2014</strong> &ndash; DEANZ Excellence Award, Distance Education Association of New Zealand (now FLANZ)</p>
+<p><strong>2008</strong> &ndash; New Zealand Ministry of Education E-Learning Fellow</p>
+<p><strong>2008</strong> &ndash; Microsoft New Zealand <em>Partners in Learning</em> Innovative Teacher</p>
+<p><strong>1991</strong> &ndash; New Zealand Microbiology Society Postgraduate Prize</p>
 
 <br>
-      <ol class="pub-list apa" aria-label="Sample publications list">
-        <li id="pub-prof-develop-2015">Fenton, M., &amp; Fenton, C. (2015). Primary teachers' experiences of professional development in Science by
-distance learning. <em>Proceedings of the New Zealand Association for Cooperative Education international conference</em>, 15–17 April.</li>
-        <li id="pub-multimeters-2011">Fenton, M. (2011). Using a digital multi-meter as an inexpensive data-logger substitute. <em>SCIOS</em>, Science Teachers Association of Western Australia.</li>
-	    <li>World Interactive Software: Year 12 Interactive Physics. Digital textbook.</li>
-      </ol>
+
 <img src="assets/img/michael-fenton-physics-interactive.jpg" alt="Year 12 Interactive Physics written by Michael Fenton" width="400" />
 <br>
-      <p><strong>More to be added soon...</strong></p>
     </main>
   </div>
   <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
